# hitagimon

./: .gitignore  .gitmodules  CMakeLists.txt  ChipsetDrivers.cc  ChipsetDrivers.h  ChipsetInteract.cc  ChipsetInteract.h  EnvironmentInterface.cc  EnvironmentInterface.h  IODevice.cc  IODevice.h  IORoutines.h  ISR.cc  LICENSE  LowLevelInterface.cc  LowLevelInterface.h  LowLevelInterface.s  README.md  access.cc  brk.cc  close.cc  console.h  d_main.c  demo.clp  f_handle.cc  fstat.cc  genfirmware  genrom  hitagimain.cc  i_main.c  i_sound.c  isatty.cc  lseek.cc  main.cc  open.cc  prog.bin.O2.slow  r_data.c  read.cc  start.ld  start2.ld  (+4 more)
arduino/: Arduino.cc  Arduino.h  Client.h  HardwareSerial.cc  HardwareSerial.h  IPAddress.h  Print.cc  Print.h  Printable.h  Stream.cc  Stream.h  WCharacter.h  WString.cc  WString.h  hooks.c  main.cc  wiring.c  wiring.cc
arduino/cores/i960/: Client.h  HardwareSerial.cc  Server.h  WString.h  wiring.cc
arduino/cores/i960/avr/: dtostrf.c  dtostrf.h  pgmspace.h
arduino/libraries/SPI/: SPI.cc  SPI.h
benchmarks/: benchmarks.h  loadStore.s  move0.s  nullTime.s  transcendental.s
boot/: ISR.cc  f_handle.cc  f_table.s  i_handle.s  i_table.s  macros.s  riscv.s  sx_init.s
chipset/: ChipsetInteract.cc  DMA.cc  DMA.h  GPIO.cc  GPIO.h  IODevice.cc  IODevice.h  IORoutines.cc  IORoutines.h  MemoryManagementUnit.cc  SPI.cc  SPI.h
clips/: MonitorExtensions.cc  MonitorExtensions.h  bmathfun.c  clips.h  constant.h  emathfun.c  entities.h  iofun.c  main.c  setup.h  sysdep.c  userfunctions.c
clp/: demo.clp  monitor.clp
coremark/: core_main.c  core_portme.h
cortex/: ChipsetInteract.h  ConfigurationSpace.h  ConfigurationSpacePage.h  EnvironmentInterface.cc  EnvironmentInterface.h  Faults.cc  Faults.def  Faults.h  FilesystemInterface.cc  FilesystemInterface.h  IAC.cc  IAC.h  IACImplementation.s  IODevice.cc  IODevice.h  IOSpace.s  IndirectInterrupts.cc  Interrupts.cc  Interrupts.h  ModernCpp.h  ModernGCC.cc  ModernGCC.h  Router.cc  Router.h  SoftwareDMA.cc  SoftwareDMA.h  SysExamine.cc  SysExamine.h  SystemCounter.cc  SystemCounter.h  Types.h  builtins.c  builtins.h  builtins.s  ext2.h  iac.s
doom/: i_sound.c  i_system.c  w_wad.c
emulation/: Domain.cc  Domain.h  README.md  RV32.cc  RV32.h  RV32.s  Segment.cc  Segment.h  m6502.cc  m6502.h
include/chipset/: IODevice.h  MemoryManagementUnit.h
include/cortex/: Interrupts.h
include/lang/: noexcept.h  nullptr.h
reference/mon960/: Makefile
reference/nindy-src/: i_handle.c.test  makefile.ex
reference/nindy-src/include/: block_io.h  break.h  bus.h  defines.h  globals.h  iac.h  memmap.h  qtcommon.h  regs.h
reference/nindy-src/qt960/: makefile.ex
research/flops32/: flops32_modded_values18.txt  flops32_modded_values25.txt  flops32_modded_values26.txt  flops_modded_values.txt  flops_modded_values10.txt  flops_modded_values11.txt  flops_modded_values12.txt  flops_modded_values13.txt  flops_modded_values14.txt  flops_modded_values15.txt  flops_modded_values16.txt  flops_modded_values17.txt  flops_modded_values19.txt  flops_modded_values2.txt  flops_modded_values20.txt  flops_modded_values21.txt  flops_modded_values22.txt  flops_modded_values23.txt  flops_modded_values24.txt  flops_modded_values3.txt  flops_modded_values4.txt  flops_modded_values5.txt  flops_modded_values6.txt  flops_modded_values7.txt  flops_modded_values8.txt  flops_modded_values9.txt  flops_stock_values.txt
shell/: entry.c  entry.h
sys/: README.md  _exit.cc  access.cc  brk.cc  close.cc  filesystem.cc  fstat.cc  getpid.cc  getrusage.cc  gettimeofday.cc  hitagi_impl.cc  kill.cc  link.cc  linkage.cc  lseek.cc  open.cc  read.cc  setitimer.cc  time.cc  unlink.cc  write.cc
tinyscheme-1.42/: scheme.c  scheme.h
wasm3/: m3_config_platforms.h  wasm3_defs.h
wide/: bootloader.s  f_handle.cc  f_table.s  i_handle.s  macros.s  start.ld  sx_init.s
